improved combo box, lodash

--- a/src/styles/time-react-select.css
+++ b/src/styles/time-react-select.css
@@ -40,7 +40,7 @@
 .react-select-time .react-select-time__option {
   background-color: #fff;
   cursor: pointer;
-  padding: 10px;
+  padding: 10px 13px;
   font-size: 15px;
 }
 
